[metadata]
name = cot
version = attr: cot.__version__

[options]
packages = find:
include_package_data = True
python_requires = >=3.7,<3.11
install_requires =
    datasets>=2.0.0,<2.2.0
    google-search-results
    langchain
    numpy==1.21.2
    nltk==3.7
    openai
    openpyxl>=3.0.9,<3.1.0
    pandas==1.3.3
    plotly==5.10.0
    rich==12.6.0
    spacy==3.4.2
    tabulate==0.8.10


[options.package_data]
bigbio.utils.resources = *.json

[options.extras_require]
dev =
  black>=22.1.0,<22.2.0
  flake8>=3.8.3,<3.9.0
  isort>=5.0.0,<5.1.0
deploy = 
  build==0.7.0
  twine==4.0.0
ipython =
  ipykernel
  ipython
  ipywidgets