[metadata]
name = cot
version = attr: cot.__version__

[options]
packages = find:
include_package_data = True
python_requires = >=3.8.1,<4.0
install_requires =
    datasets>=2.0.0,<2.2.0
    ipykernel==5.5.6
    ipython>=7.0.0
    ipywidgets>=7.0.0
    jsonmerge==1.9.0
    # langchain>=0.0.106
    langchain==0.1.3
    langchain-community==0.0.15
    langchain-core==0.1.15
    numpy>=1.21.2
    nltk==3.7
    openpyxl>=3.0.9,<3.1.0
    pandas>=1.3.3
    plotly==5.10.0
    requests==2.31.0
    rich==12.6.0
    spacy==3.7.2
    tabulate==0.9
    torch>=2.0.0
    transformers>=4.41.2

[options.package_data]
bigbio.utils.resources = *.json

[options.extras_require]
api=
  # google-search-results==2.4.1
  cohere==3.2.3
  huggingface-hub==0.10.1
  openai==0.27.0
dev =
  black>=22.1.0,<22.2.0
  flake8>=3.8.3,<3.9.0
  isort>=5.0.0,<5.1.0
  nbmake>=1.0.0
  pytest>=7.0.0

deploy = 
  build==0.7.0
  twine==4.0.0